k8s/chart/files/kourier.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: net-kourier
    namespace: knative-serving
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: net-kourier
rules:
    - apiGroups:
          - ''
      resources:
          - events
      verbs:
          - create
          - update
          - patch
    - apiGroups:
          - ''
      resources:
          - pods
          - services
          - secrets
      verbs:
          - get
          - list
          - watch
    - apiGroups:
          - ''
      resources:
          - configmaps
      verbs:
          - get
          - list
          - watch
    - apiGroups:
          - discovery.k8s.io
      resources:
          - endpointslices
      verbs:
          - get
          - list
          - watch
    - apiGroups:
          - coordination.k8s.io
      resources:
          - leases
      verbs:
          - get
          - list
          - create
          - update
          - delete
          - patch
          - watch
    - apiGroups:
          - networking.internal.knative.dev
      resources:
          - ingresses
      verbs:
          - get
          - list
          - watch
          - patch
    - apiGroups:
          - networking.internal.knative.dev
      resources:
          - ingresses/status
      verbs:
          - update
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: net-kourier
roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: net-kourier
subjects:
    - kind: ServiceAccount
      name: net-kourier
      namespace: knative-serving
---
apiVersion: v1
data:
    _example: |
        ################################
        #                              #
        #    EXAMPLE CONFIGURATION     #
        #                              #
        ################################

        # This block is not actually functional configuration,
        # but serves to illustrate the available configuration
        # options and document them in a way that is accessible
        # to users that `kubectl edit` this config map.
        #
        # These sample configuration options may be copied out of
        # this example block and unindented to be in the data block
        # to actually change the configuration.

        # Specifies whether requests reaching the Kourier gateway
        # in the context of services should be logged. Readiness
        # probes etc. must be configured via the bootstrap config.
        enable-service-access-logging: "true"

        # Specifies the format of the access log used by the Kourier gateway.
        # This template follows the envoy format.
        # see: https://www.envoyproxy.io/docs/envoy/latest/configuration/observability/access_log/usage#access-logging
        service-access-log-template: ""

        # Specifies whether to use proxy-protocol in order to safely
        # transport connection information such as a client's address
        # across multiple layers of TCP proxies.
        # NOTE THAT THIS IS AN EXPERIMENTAL / ALPHA FEATURE
        enable-proxy-protocol: "false"

        # The server certificates to serve the internal TLS traffic for Kourier Gateway.
        # It is specified by the secret name in controller namespace, which has
        # the "tls.crt" and "tls.key" data field.
        # Use an empty value to disable the feature (default).
        #
        # NOTE: This flag is in an alpha state and is mostly here to enable internal testing
        #       for now. Use with caution.
        cluster-cert-secret: ""

        # Specifies the amount of time that Kourier waits for the incoming requests.
        # The default, 0s, imposes no timeout at all.
        stream-idle-timeout: "0s"

        # Specifies whether to use CryptoMB private key provider in order to
        # acclerate the TLS handshake.
        # NOTE THAT THIS IS AN EXPERIMENTAL / ALPHA FEATURE.
        enable-cryptomb: "false"

        # Configures the number of additional ingress proxy hops from the
        # right side of the x-forwarded-for HTTP header to trust.
        trusted-hops-count: "0"

        # Configures the connection manager to use the real remote address
        # of the client connection when determining internal versus external origin and manipulating various headers.
        use-remote-address: "false"

        # Specifies the cipher suites for TLS external listener.
        # Use ',' separated values like "ECDHE-ECDSA-AES128-GCM-SHA256,ECDHE-ECDSA-CHACHA20-POLY1305"
        # The default uses the default cipher suites of the envoy version.
        cipher-suites: ""

        # Disable the Envoy server header injection in the response when response has no such header.
        disable-envoy-server-header: "false"

        # The external authorization service and port, my-auth:2222.
        # This value overrides environment variable if defined.
        extauthz-host: ""

        # The protocol used to query the ext auth service. Can be one of : grpc, http, https. Defaults to grpc
        # This value overrides environment variable if defined.
        extauthz-protocol: "grpc"

        # Allow traffic to go through if the ext auth service is down. Accepts true/false.
        # This value overrides environment variable if defined.
        extauthz-failure-mode-allow: ""

        # Max request bytes, if not set, defaults to 8192 Bytes. More info Envoy Docs
        # see: https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/ext_authz/v3/ext_authz.proto.html#extensions-filters-http-ext-authz-v3-buffersettings
        # This value overrides environment variable if defined.
        extauthz-max-request-body-bytes: 8192

        # Max time in ms to wait for the ext authz service. Defaults to 2000 ms
        # This value overrides environment variable if defined.
        extauthz-timeout: 2000

        # If extauthz-protocol is equal to http or https, path to query the ext auth service.
        # Example : if set to /verify, it will query /verify/ (notice the trailing /). If not set, it will query /
        # This value overrides environment variable if defined.
        extauthz-path-prefix: ""

        # If extauthz-protocol is equal to grpc, sends the body as raw bytes instead of a UTF-8 string.
        # Accepts only true/false, t/f or 1/0. Attempting to set another value will throw an error.
        # Defaults to false. More info Envoy Docs.
        # see: https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/ext_authz/v3/ext_authz.proto.html#extensions-filters-http-ext-authz-v3-buffersettings
        # This value overrides environment variable if defined.
        extauthz-pack-as-byte: "false"

        # Specifies the secret that contains the TLS certificate and key pair when using HTTPS communication with Kourier Ingress.
        # This value overrides environment variable if defined.
        certs-secret-name: ""
        certs-secret-namespace: ""

        # Specifies the OTLP collector endpoint for distributed tracing.
        # The endpoint format depends on the protocol (see tracing-protocol).
        # Examples:
        # - For HTTP: "http://otel-collector.observability.svc:4318/v1/traces"
        # - For gRPC: "http://otel-collector.observability.svc:4317"
        # Use an empty value to disable distributed tracing (default).
        tracing-endpoint: ""

        # Protocol for tracing collector communication.
        # Valid values: http/protobuf, grpc
        tracing-protocol: "grpc"

        # Tracing sampling rate (0.0 to 1.0)
        # Controls the percentage of requests that are traced.
        # Example: "1.0" traces 100% of requests.
        tracing-sampling-rate: "1.0"

        # Service name for traces
        # This identifies the Kourier gateway in your tracing system.
        tracing-service-name: "kourier-knative"
    cluster-cert-secret: longlink-gateway-tls
kind: ConfigMap
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: config-kourier
    namespace: knative-serving
---
apiVersion: v1
data:
    envoy-bootstrap.yaml: |
        dynamic_resources:
          ads_config:
            transport_api_version: V3
            api_type: GRPC
            rate_limit_settings: {}
            grpc_services:
            - envoy_grpc: {cluster_name: xds_cluster}
          cds_config:
            resource_api_version: V3
            ads: {}
          lds_config:
            resource_api_version: V3
            ads: {}
        node:
          cluster: kourier-knative
          id: 3scale-kourier-gateway
        static_resources:
          listeners:
            - name: stats_listener
              address:
                socket_address:
                  address: "::"
                  port_value: 9000
                  ipv4_compat: true
              filter_chains:
                - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                        stat_prefix: stats_server
                        http_filters:
                          - name: envoy.filters.http.router
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                        route_config:
                          virtual_hosts:
                            - name: admin_interface
                              domains:
                                - "*"
                              routes:
                                - match:
                                    safe_regex:
                                      regex: '/(certs|stats(/prometheus)?|server_info|clusters|listeners|ready)?'
                                    headers:
                                      - name: ':method'
                                        string_match:
                                          exact: GET
                                  route:
                                    cluster: service_stats
                                - match:
                                    safe_regex:
                                      regex: '/drain_listeners'
                                    headers:
                                      - name: ':method'
                                        string_match:
                                          exact: POST
                                  route:
                                    cluster: service_stats
          clusters:
            - name: service_stats
              connect_timeout: 0.250s
              type: static
              load_assignment:
                cluster_name: service_stats
                endpoints:
                  lb_endpoints:
                    endpoint:
                      address:
                        socket_address:
                          address: 127.0.0.1
                          port_value: 9901
            - name: xds_cluster
              # This keepalive is recommended by envoy docs.
              # https://www.envoyproxy.io/docs/envoy/latest/api-docs/xds_protocol
              typed_extension_protocol_options:
                envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
                  "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
                  explicit_http_config:
                    http2_protocol_options:
                      connection_keepalive:
                        interval: 30s
                        timeout: 5s
              connect_timeout: 1s
              load_assignment:
                cluster_name: xds_cluster
                endpoints:
                  lb_endpoints:
                    endpoint:
                      address:
                        socket_address:
                          address: "net-kourier-controller.knative-serving"
                          port_value: 18000
              type: STRICT_DNS
        admin:
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          address:
            socket_address:
              address: 127.0.0.1
              port_value: 9901
kind: ConfigMap
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: kourier-bootstrap
    namespace: kourier-system
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: net-kourier-controller
    namespace: knative-serving
spec:
    ports:
        - name: grpc-xds
          port: 18000
          protocol: TCP
          targetPort: 18000
        - name: http-metrics
          port: 9090
          protocol: TCP
          targetPort: 9090
    selector:
        app: net-kourier-controller
    type: ClusterIP
apiVersion: v1
kind: Service
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: kourier-internal
    namespace: kourier-system
spec:
    ports:
        - name: http2
          port: 80
          protocol: TCP
          targetPort: 8081
        - name: https
          port: 443
          protocol: TCP
          targetPort: 8444
    selector:
        app: 3scale-kourier-gateway
    type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: net-kourier-controller
    namespace: knative-serving
spec:
    replicas: 1
    selector:
        matchLabels:
            app: net-kourier-controller
    strategy:
        rollingUpdate:
            maxSurge: 100%
            maxUnavailable: 0
        type: RollingUpdate
    template:
        metadata:
            annotations:
                prometheus.io/path: /metrics
                prometheus.io/port: '9090'
                prometheus.io/scrape: 'true'
            labels:
                app: net-kourier-controller
        spec:
            containers:
                - env:
                      - name: CERTS_SECRET_NAMESPACE
                        value: ''
                      - name: CERTS_SECRET_NAME
                        value: ''
                      - name: SYSTEM_NAMESPACE
                        valueFrom:
                            fieldRef:
                                fieldPath: metadata.namespace
                      - name: METRICS_DOMAIN
                        value: knative.dev/samples
                      - name: KOURIER_GATEWAY_NAMESPACE
                        value: kourier-system
                      - name: ENABLE_SECRET_INFORMER_FILTERING_BY_CERT_UID
                        value: 'false'
                      - name: KUBE_API_BURST
                        value: '200'
                      - name: KUBE_API_QPS
                        value: '200'
                  image: gcr.io/knative-releases/knative.dev/net-kourier/cmd/kourier@sha256:eedfe3938f1efa93230863099f96400a0567909d383a585021f8727fa3a6cf0b
                  livenessProbe:
                      failureThreshold: 6
                      grpc:
                          port: 18000
                      periodSeconds: 10
                  name: controller
                  ports:
                      - containerPort: 18000
                        name: http2-xds
                        protocol: TCP
                      - containerPort: 9090
                        name: metrics
                        protocol: TCP
                  readinessProbe:
                      failureThreshold: 3
                      grpc:
                          port: 18000
                      periodSeconds: 10
                  resources:
                      limits:
                          cpu: '1'
                          memory: 500Mi
                      requests:
                          cpu: 200m
                          memory: 200Mi
                  securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                      readOnlyRootFilesystem: true
                      runAsNonRoot: true
                      seccompProfile:
                          type: RuntimeDefault
            restartPolicy: Always
            serviceAccountName: net-kourier
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: 3scale-kourier-gateway
    namespace: kourier-system
spec:
    selector:
        matchLabels:
            app: 3scale-kourier-gateway
    strategy:
        rollingUpdate:
            maxSurge: 100%
            maxUnavailable: 0
        type: RollingUpdate
    template:
        metadata:
            annotations:
                networking.knative.dev/poke: v0.26
                prometheus.io/path: /stats/prometheus
                prometheus.io/port: '9000'
                prometheus.io/scrape: 'true'
            labels:
                app: 3scale-kourier-gateway
        spec:
            containers:
                - args:
                      - --base-id 1
                      - -c /tmp/config/envoy-bootstrap.yaml
                      - --log-level info
                      - --drain-time-s $(DRAIN_TIME_SECONDS)
                      - --drain-strategy immediate
                  command:
                      - /usr/local/bin/envoy
                  env:
                      - name: DRAIN_TIME_SECONDS
                        value: '15'
                  image: docker.io/envoyproxy/envoy@sha256:ea33a83e4bb1b34b9345f1d98930af9c70d19a0ee1680d9ff087789636fdbc34
                  lifecycle:
                      preStop:
                          exec:
                              command:
                                  - /bin/sh
                                  - -c
                                  - curl -X POST http://localhost:9901/drain_listeners?graceful; sleep
                                    $DRAIN_TIME_SECONDS
                  livenessProbe:
                      failureThreshold: 6
                      httpGet:
                          httpHeaders:
                              - name: Host
                                value: internalkourier
                          path: /ready
                          port: 8081
                          scheme: HTTP
                      initialDelaySeconds: 10
                      periodSeconds: 5
                      timeoutSeconds: 3
                  name: kourier-gateway
                  ports:
                      - containerPort: 8080
                        name: http2-external
                        protocol: TCP
                      - containerPort: 8081
                        name: http2-internal
                        protocol: TCP
                      - containerPort: 8443
                        name: https-external
                        protocol: TCP
                      - containerPort: 8090
                        name: http-probe
                        protocol: TCP
                      - containerPort: 9443
                        name: https-probe
                        protocol: TCP
                      - containerPort: 9000
                        name: metrics
                        protocol: TCP
                  readinessProbe:
                      failureThreshold: 3
                      httpGet:
                          httpHeaders:
                              - name: Host
                                value: internalkourier
                          path: /ready
                          port: 8081
                          scheme: HTTP
                      initialDelaySeconds: 10
                      periodSeconds: 5
                      timeoutSeconds: 3
                  resources:
                      limits:
                          cpu: '1'
                          memory: 800Mi
                      requests:
                          cpu: 200m
                          memory: 200Mi
                  securityContext:
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop:
                              - ALL
                      readOnlyRootFilesystem: false
                      runAsGroup: 65534
                      runAsNonRoot: true
                      runAsUser: 65534
                      seccompProfile:
                          type: RuntimeDefault
                  volumeMounts:
                      - mountPath: /tmp/config
                        name: config-volume
            restartPolicy: Always
            terminationGracePeriodSeconds: 30
            volumes:
                - configMap:
                      name: kourier-bootstrap
                  name: config-volume
---
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: 3scale-kourier-gateway-pdb
    namespace: kourier-system
spec:
    minAvailable: 80%
    selector:
        matchLabels:
            app: 3scale-kourier-gateway
---
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
    labels:
        app.kubernetes.io/component: net-kourier
        app.kubernetes.io/name: knative-serving
        app.kubernetes.io/version: 1.23.0
        networking.knative.dev/ingress-provider: kourier
    name: 3scale-kourier-gateway
    namespace: kourier-system
spec:
    maxReplicas: 10
    metrics:
        - resource:
              name: cpu
              target:
                  averageUtilization: 100
                  type: Utilization
          type: Resource
    minReplicas: 1
    scaleTargetRef:
        apiVersion: apps/v1
        kind: Deployment
        name: 3scale-kourier-gateway
